--- a/index.html
+++ b/index.html
@@ -3,20 +3,25 @@
 <head>
     <meta charset="utf-8">
     <title>Chicago Neighborhood Map</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.1.1/css/bootstrap.css" rel="stylesheet" media="screen">
-    <link href="css/style.css" rel="stylesheet" media="screen">
+   <!--- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+   <link rel="stylesheet" media="screen" href="css/style.css" >
+   <!--added next line for collapsible settings -->
+   <link rel="stylesheet" type="text/css" href="jvmobilemenu/jv-jquery-mobile-menu.css">
 </head>
 <body>	
-    <div id="places" class="places">
-		<ul data-bind="foreach: searchPlaces">
-			<li data-bind="text: $data.name, click: $parent.setCurrentPlace, css: { selected: $data.selected() > 0 }"></li>
-		</ul>
-		<ul>
-			<form action="#">
-				<input class="search" placeholder="search" type="search" name="search" data-bind="value: searchBox, valueUpdate: 'keyup'" autocomplete="off">
-			</form>
-		</ul>
+	<!--added next line for collapsible settings -->
+    <div class="mobile-nav">
+	    <div id="places" class="places">
+			<ul data-bind="foreach: searchPlaces">
+				<li data-bind="text: $data.name, click: $parent.setCurrentPlace, css: { selected: $data.selected() > 0 }"></li>
+			</ul>
+			<ul>
+				<form action="#">
+					<input class="search" placeholder="search" type="search" name="search" data-bind="value: searchBox, valueUpdate: 'keyup'" autocomplete="off">
+				</form>
+			</ul>
+		</div>
 	</div>
 	<div id="map-canvas" class="map-canvas"></div>	
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
@@ -24,6 +29,8 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.3.0/knockout-min.js"></script>
 	<script src="./js/libs/infobubble.js"></script>
 	<script src="./js/app.js"></script>
-	<script src="./js/libs/jquery.collapsible.min.js"></script>
+	<script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
+	<script src="jvmobilemenu/jv-jquery-mobile-menu-min.js"></script>
+	<script src="js/script-left.js"></script>	
 </body>
 </html>
